--- a/container-service/Dockerfile
+++ b/container-service/Dockerfile
@@ -9,7 +9,14 @@ FROM alpine:latest
 RUN apk --no-cache add ca-certificates
 WORKDIR /app
 COPY --from=builder /out/app ./app
+
+# Expose app port (your API)
 EXPOSE 8081
+
+# Expose Prometheus metrics port
+EXPOSE 2112
+
 ENV SPARROW_ORIGIN="http://localhost:5173" \
     CLONE_BASE_DIR="/temp"
-CMD [ "./app" ]
+
+CMD ["./app"]
